navigation to summary page until summary is developed

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -38,7 +38,7 @@
 
 		<div class="sub-title">training</div>
 
-		<div mat-button class="mat-button"  [routerLink]="['/faqsManual']" skipLocationChange routerLinkActive="active">
+		<div mat-button class="mat-button">
 			<span class="inlineIconBox leftAdjust">
 				<img src="assets/icons/sidemenu/training.svg" class="callHistory">				
 			</span>
