--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -420,3 +420,18 @@ body::-webkit-scrollbar {
         cursor: pointer;
     }
 }
+.faq-filter-add{
+    background: #FFFFFF;
+    box-shadow: 0px 10px 35px rgba(32, 33, 36, 0.2);
+    width: 160px;  
+    min-width: 160px;
+    padding: 10px 20px;
+    border: 0;        
+    margin: 0px 0 0 0;
+    li{
+        font-size: 13px;
+        color: #202124;
+        padding: 8px 0;
+        cursor: pointer;
+    }
+}
