--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -847,6 +847,10 @@
                                     }
                                 }
                             }
+                            .faq-filter-add{
+                                max-height: 200px;
+                                overflow: hidden;;
+                            }
                             &.show {
                                 .dropdown-open{
                                     .dropdown-input{
@@ -986,7 +990,17 @@
                                         }
                                     }
                                 }
-                            }                                            
+                            }   
+                            .divBlockEmptylastChild{
+                                display: none;
+                                text-align: center;
+                                width: 100%;
+                                padding: 10%;
+                                white-space: break-spaces;
+                            }
+                            div.divBlockEmptylastChild:first-child {
+                                display: block !important;
+                            }                                          
                         }
                         .footer-btns{
                             background: #FFFFFF;
@@ -1145,6 +1159,34 @@
                     position: relative;
                 }                      
             }
+            .empty-questions-selected{
+                width: 320px;
+                margin: 0 auto;
+                // height: calc(100% - 60px);
+                text-align: center;
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                flex-direction: column;                       
+                -webkit-box-pack: center;                       
+                -ms-flex-pack: center;                       
+                justify-content: center;   
+                img{
+                    width: 75%;
+                    margin: 0 auto;
+                }     
+                .heading{
+                    margin: 18px 0 8px 0;
+                    color: $primaryColor;
+                }
+                .desc{
+                    color: $secondaryColor;
+                    font-size: 14px;
+                }
+            } 
         }
     }
 }
