--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -420,13 +420,13 @@ div.divBlockEmptylastChild:first-child {
     width: 140px;
     top: 3px !important;
     min-width: 140px;
-    padding: 10px 10px;
+    padding: 10px 0px;
     border: 0;        
     margin: 8px 0 0 0;
     li{
         font-size: 13px;
         color: #202124;
-        padding: 8px 10px;
+        padding: 8px 20px;
         cursor: pointer;
         &:hover{
             background: #EFF0F1;
@@ -438,13 +438,18 @@ div.divBlockEmptylastChild:first-child {
     box-shadow: 0px 10px 35px rgba(32, 33, 36, 0.2);
     width: 160px;  
     min-width: 160px;
-    padding: 10px 20px;
+    padding: 10px 0px;
     border: 0;        
     margin: 0px 0 0 0;
+    max-height: 250px;
+    overflow: auto;
     li{
         font-size: 13px;
         color: #202124;
-        padding: 8px 0;
+        padding: 8px 20px;
         cursor: pointer;
+        &:hover{
+            background: #EFF0F1;
+        }
     }
 }
